Revision history for Perl module Handel

1.00002 Sat June 30 17:15:12 2007
    - Catalyst Model tests now skip when Catalyst not installed
    - Fixed Catalyst tests after fresh perl install explosion
    - Fixed pod coverage

1.00001 Mon June 25 22:05:26 2007
    - Fixed basic.t use_ok failures due to dev install
    - Fixed various test skip counts
    - Fixed Component::Validation to deal with new
        DBIC::Validation/throw_exception changes

1.00000 Sun June 24 08:57:22 2007
    - constraint_price now uses $currency->value if value isa
        Data::Currency object

0.99_19 Thur June 21 21:02:36 2007
    - Storage->setup now puts non-accessor keys into %$self
    - Removed incomplete L10N Lexicons
    - Cleanup coverage before 1.0 release
    - DBIx::Class 0.08 Released & Required
    - Added AutoCommit to Handel::Test
    - Tweaked failing checkout process tests

0.99_18 Wed Apr 18 19:55:09 2007
    - Added --version to handel.pl/handel.bat
    - Fixed Handel::Compat::Currency pod
    - Updated prereq to use DBIx::Class 0.07999_02
    - Added skips for DBD::SQLite 1.13 (teh devil) causing failing tests
    - Updated Perl::Critic tests

0.99_17 Wed Mar 21 20:11:24 2007
    - Renamed ConfigReaders %Defaults to %DEFAULTS
    - Removed t/style_critic_tests. ETOOMUCHWORKFORLITTLEBENEFIT
    - Updated Test::MockObject in tests to 1.07
    - Fixed destroy in Order
    - Fixed has_column check when setting item currency columns

    BREAKING API CHANGE:
    - Handel::Currency isa Data::Currency
    - H::C::format moved to as_string; now just returns the format

0.99_16 Thur Dec 21 16:21:15 2006
    - Added \%options/order_by to search/items in Cart/Order
    - Added has_column to DBIC Storage to use ResultSource->has_column
    - Added has_column to Result/DBIC Result
    - Fixed TT demo code. Maybe that will die some day.
        Seriously. Two words: Catalyst Helpers. :-)
    - Fixed issue where Compat Currency convert failed with converter returns 0