@@ -7,7 +7,7 @@ BEGIN {
     use lib 't/lib';
     use Handel::Test;
 
-    plan skip_all => 'set TEST_MANIFEST or TEST_PRIVATE to enable this test' unless $ENV{TEST_MANIFEST} || $ENV{TEST_PRIVATE};
+    plan skip_all => 'set TEST_AUTHOR to enable this test' unless $ENV{TEST_AUTHOR};
 
     eval 'use Test::CheckManifest 0.09';
     if($@) {
