@@ -7,7 +7,7 @@ BEGIN {
     use lib 't/lib';
     use Handel::Test;
 
-    plan skip_all => 'set TEST_POD to enable this test' unless $ENV{TEST_POD};
+    plan skip_all => 'set TEST_AUTHOR to enable this test' unless $ENV{TEST_AUTHOR};
 
     eval 'use Test::Spelling 0.11';
     plan skip_all => 'Test::Spelling 0.11 not installed' if $@;
